--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <p>Millions of people have been inspired by <cite>The Fountainhead</cite>, Ayn Rand's story of architect Howard Roark and his epic struggle for creative freedom.</li>
 <p>Yet inspiration is not enough: you need a blueprint for turning that vision into a flourishing life of joy and reason and meaning.</p>
 <p><cite>The Tao of Roark</cite> provides that blueprint.  It builds the foundation for greater freedom, dignity, depth, and beauty in life.  It reveals the hidden connections between serenity and enthusiasm, passion and wisdom, independence and security, idealism and maturity, practicality and commitment.  It shows the true harmony of self and other, inner and outer, the personal and the social.  It lights the path to clearer thinking, healthier choices, greater achievement, and deeper emotions.  It honors above all the sacred fire of individuality.  It helps you find and keep the name of your soul.</p>
-<p>If you love <cite>The Fountainhead</cite>, you will treasure <a href='tao.html'>The Tao of Roark</a>.</p>
+<p>If you love <cite>The Fountainhead</cite>, you will treasure <cite>The Tao of Roark</cite>.</p>
+<p>Take an hour to read it now in these convenient formats: <a href='tao.html'>HTML</a> (great for mobile phones), <a href='tao-of-roark.pdf'>PDF</a>, and <a href='tao-of-roark.epub'>EPUB</a>. Kindle version on the way...</p>
 </body>
 </html>
