--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 <p>Yet inspiration is not enough: you need a blueprint for turning that vision into a flourishing life of joy and reason and meaning.</p>
 <p><cite>The Tao of Roark</cite> provides that blueprint.  It builds the foundation for greater freedom, dignity, depth, and beauty in life.  It reveals the hidden connections between serenity and enthusiasm, passion and wisdom, independence and security, idealism and maturity, practicality and commitment.  It shows the true harmony of self and other, inner and outer, the personal and the social.  It lights the path to clearer thinking, healthier choices, greater achievement, and deeper emotions.  It honors above all the sacred fire of individuality.  It helps you find and keep the name of your soul.</p>
 <p>If you love <cite>The Fountainhead</cite>, you will treasure <cite>The Tao of Roark</cite>.</p>
-<p>Take an hour to read it now in mobile-friendly <a href='tao.html'>HTML format</a> (always available for free at this website), or buy the <a href='http://www.amazon.com/dp/B00D0BOVE2'>Kindle edition</a>. A print version will be available soon.</p>
+<p>The book will always be available for free <a href='tao.html'>on this website</a>. Kindle and print versions can be purchased at <a href='http://www.amazon.com/dp/B00D0BOVE2/'>Amazon</a>.</p>
 </body>
 </html>
