Added link to "Letters on Happiness: An Epicurean Dialogue".

--- a/exploration.html
+++ b/exploration.html
@@ -21,7 +21,7 @@
   <li><cite>The Gnostic Gospels</cite> by Elaine Pagels</li>
   <li><cite>Old Nick's Guide to Happiness</cite> by Nicholas Dykes</li>
   <li><cite>The Gay Science</cite> by Friedrich Nietzsche</li>
-  <li>My book <cite>Letters on Happiness: An Epicurean Dialogue</cite></li>
+  <li>My book <cite><a href='https://stpeter.im/writings/epicurus/'>Letters on Happiness: An Epicurean Dialogue</a></cite></li>
   <li><cite>Goldberg Variations</cite> by J.S. Bach (my favorite recordings are Glenn Gould's 1981 version and a transcription for harp by Catrin Finch)</li>
 </ul>
 
