--- a/exploration.html
+++ b/exploration.html
@@ -17,13 +17,23 @@
 
 <ul>
   <li><cite>The Fountainhead</cite> by Ayn Rand</li>
-  <li><cite>Tao Te Ching</cite> by Lao Tzu (my preferred translation is Derek Lin's)</li>
+  <li><cite>Tao Te Ching</cite> by Lao Tzu (my preferred translation is by Derek Lin)</li>
   <li><cite>The Gnostic Gospels</cite> by Elaine Pagels</li>
   <li><cite>Old Nick's Guide to Happiness</cite> by Nicholas Dykes</li>
   <li><cite>The Gay Science</cite> by Friedrich Nietzsche</li>
-  <li>My book <cite>Letters on Happiness: An Epicurean Dialogue</cite></li>
   <li><cite>Goldberg Variations</cite> by J.S. Bach (my favorite recordings are Glenn Gould's 1981 version and a transcription for harp by Catrin Finch)</li>
 </ul>
+
+<p><cite>The Tao of Roark</cite> is the first volume in a six-movement "suite" of books I'm writing on living well and doing well:</p>
+
+<ol>
+  <li><cite>The Tao of Roark</cite></li>
+  <li><a href='http://stpeter.im/writings/nietzsche/'>Songs of Zarathustra: Poetic Perspectives on Nietzsche's Philosophy of Life</a></li>
+  <li><cite>A Worthy Life: The Essence of Aristotle's Ethics</cite></li>
+  <li><a href='http://stpeter.im/writings/thoreau/'>The Upland Farm: Thoreau on Cultivating a Better Life</a></li>
+  <li><a href='http://stpeter.im/writings/epicurus/'>Letters on Happiness: An Epicurean Dialogue</a></li>
+  <li><cite>Stories of the Way: Parables on Taoism</cite></li>
+</ol>
 
 <!--<p>&#115;&#116;&#112;&#101;&#116;&#101;&#114;&#64;&#115;&#116;&#112;&#101;&#116;&#101;&#114;&#46;&#105;&#109;</p>-->
 
