--- a/exploration.html
+++ b/exploration.html
@@ -37,5 +37,7 @@
 
 <!--<p>&#115;&#116;&#112;&#101;&#116;&#101;&#114;&#64;&#115;&#116;&#112;&#101;&#116;&#101;&#114;&#46;&#105;&#109;</p>-->
 
+<hr/>
+<p><a href='/'>The Tao of Roark</a> &gt; Further Exploration</p>
 </body>
 </html>
