--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <meta name="DC.Creator" content="Peter Saint-Andre"/>
 <meta name="DC.Rights" content="http://creativecommons.org/publicdomain/zero/1.0/"/>
 <meta name="description" content="The Tao of Roark is a set of variations on a theme from Ayn Rand's novel The Fountainhead, setting forth a humanistic interpretation of her philosophy of Objectivism as a wisdom tradition that provides deep insights into the search for joy and reason and meaning in life.">
-<meta name='keywords' content='Ayn Rand, objectivism, ethics, happiness, humanism, taoism, Lao Tzu, gnosticism'/>
+<meta name='keywords' content='Ayn Rand, Fountainhead, Objectivism, ethics, happiness, humanism, taoism, Lao Tzu, gnosticism'/>
 <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
 </head>
 <body>
 <h1>The Tao of Roark</h1>
 <h2>by Peter Saint-Andre</h2>
-<p>Millions of people have been inspired by <cite>The Fountainhead</cite>, Ayn Rand's story of architect Howard Roark and his epic struggle for creative freedom.</li>
+<p><img src="/images/tao-small.jpg" width="225" height="360" border="0" alt="Tao of Roark" align="right"/>Millions of people have been inspired by <cite>The Fountainhead</cite>, Ayn Rand's story of architect Howard Roark and his epic struggle for creative freedom.</li>
 <p>Yet inspiration is not enough: you need a blueprint for turning that vision into a flourishing life of joy and reason and meaning.</p>
 <p><cite>The Tao of Roark</cite> provides that blueprint.  It builds the foundation for greater freedom, dignity, depth, and beauty in life.  It reveals the hidden connections between serenity and enthusiasm, passion and wisdom, independence and security, idealism and maturity, practicality and commitment.  It shows the true harmony of self and other, inner and outer, the personal and the social.  It lights the path to clearer thinking, healthier choices, greater achievement, and deeper emotions.  It honors above all the sacred fire of individuality.  It helps you find and keep the name of your soul.</p>
 <p>If you love <cite>The Fountainhead</cite>, you will treasure <cite>The Tao of Roark</cite>.</p>
