--- a/exploration.html
+++ b/exploration.html
@@ -24,7 +24,7 @@
   <li><cite>Goldberg Variations</cite> by J.S. Bach (my favorite recordings are Glenn Gould's 1981 version and a transcription for harp by Catrin Finch)</li>
 </ul>
 
-<p><cite>The Tao of Roark</cite> is the first volume in a six-movement "suite" of books I'm writing on living well and doing well:</p>
+<p><cite>The Tao of Roark</cite> is the first volume in a six-movement "suite" of books I'm writing on the art of living:</p>
 
 <ol>
   <li><cite>The Tao of Roark</cite></li>
