--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="DC.Creator" content="Peter Saint-Andre"/>
 <meta name="DC.Rights" content="http://creativecommons.org/publicdomain/zero/1.0/"/>
 <meta name="description" content="The Tao of Roark is a set of variations on a theme from Ayn Rand's novel The Fountainhead, setting forth a humanistic interpretation of her philosophy of Objectivism as a wisdom tradition that provides deep insights into the search for joy and reason and meaning in life.">
-<meta name='keywords' content='Ayn Rand, Fountainhead, Objectivism, ethics, happiness, humanism, taoism, Lao Tzu, gnosticism'/>
+<meta name='keywords' content='Ayn Rand, Fountainhead, Objectivism, ethics, happiness, humanism, Taoism, Lao Tzu, gnosticism, bibliotherapy'/>
 <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
 </head>
 <body>
