--- a/exploration.html
+++ b/exploration.html
@@ -20,11 +20,11 @@
   <li><cite>Tao Te Ching</cite> by Lao Tzu (my preferred translation is by Derek Lin)</li>
   <li><cite>The Gnostic Gospels</cite> by Elaine Pagels</li>
   <li><cite>Old Nick's Guide to Happiness</cite> by Nicholas Dykes</li>
-  <li><cite>The Gay Science</cite> by Friedrich Nietzsche</li>
+  <li><cite>The Joyful Wisdom</cite> by Friedrich Nietzsche</li>
   <li><cite>Goldberg Variations</cite> by J.S. Bach (my favorite recordings are Glenn Gould's 1981 version and a transcription for harp by Catrin Finch)</li>
 </ul>
 
-<p><cite>The Tao of Roark</cite> is the first volume in a six-movement "suite" of books I'm writing on the art of living:</p>
+<p><cite>The Tao of Roark</cite> is the first volume in a six-movement suite of books I'm writing on the art of living:</p>
 
 <ol>
   <li><cite>The Tao of Roark</cite></li>
