--- a/exploration.html
+++ b/exploration.html
@@ -7,9 +7,9 @@
 <meta name="DC.Creator" content="Peter Saint-Andre"/>
 <meta name="DC.Rights" content="http://creativecommons.org/publicdomain/zero/1.0/"/>
 <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
-<meta http-equiv='refresh' content='0; url=http://stpeter.im/writings/roark/exploration.html'/>
+<meta http-equiv='refresh' content='0; url=https://stpeter.im/writings/roark/exploration.html'/>
 </head>
 <body>
-<p>This page is now located at <a href='http://stpeter.im/writings/roark/exploration.html'>http://stpeter.im/writings/roark/exploration.html</a>.</p>
+<p>This page is now located at <a href='https://stpeter.im/writings/roark/exploration.html'>https://stpeter.im/writings/roark/exploration.html</a>.</p>
 </body>
 </html>
