--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <meta name="DC.Creator" content="Peter Saint-Andre"/>
 <meta name="DC.Rights" content="http://creativecommons.org/publicdomain/zero/1.0/"/>
 <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
-<meta http-equiv='refresh' content='0; url=http://stpeter.im/writings/roark/'/>
+<meta http-equiv='refresh' content='0; url=https://stpeter.im/writings/roark/'/>
 </head>
 <body>
-<p>This page is now located at <a href='http://stpeter.im/writings/roark/'>http://stpeter.im/writings/roark/</a>.</p>
+<p>This page is now located at <a href='https://stpeter.im/writings/roark/'>https://stpeter.im/writings/roark/</a>.</p>
 </body>
 </html>
